--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,43 +1,43 @@
 {
-    // Use IntelliSense para saber los atributos posibles.
-    // Mantenga el puntero para ver las descripciones de los existentes atributos.
-    // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "pwa-node",
-            "request": "launch",
-            "name": "Launch Deno Test",
-            "program": "${workspaceFolder}/src/problems/day9/partOne/test.ts",
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": "deno",
-            "runtimeArgs": [
-                "run",
-                "--inspect-brk=127.0.0.1:9229",
-                "--allow-all"
-            ],
-            "attachSimplePort": 9229
-        },
-        {
-            "name": "Launch Deno",
-            "request": "launch",
-            "type": "pwa-node",
-            "program": "./src/cli/mod.ts",
-            "runtimeExecutable": "deno",
-            "cwd": "${workspaceFolder}",
-            "runtimeArgs": [
-                "run",
-                "--unstable",
-                "--inspect-brk",
-                "--allow-all",
-            ],
-            "args": [
-                "-d 10",
-                "--part2",
-                "src/problems/day10/sample.txt"
-            ],
-            "attachSimplePort": 9229,
-            "outputCapture": "std"
-        }
-    ]
+  // Use IntelliSense para saber los atributos posibles.
+  // Mantenga el puntero para ver las descripciones de los existentes atributos.
+  // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "Launch Deno Test",
+      "program": "${workspaceFolder}/src/problems/day11/partTwo/test.ts",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "deno",
+      "runtimeArgs": [
+        "test",
+        "--inspect-brk=127.0.0.1:9229",
+        "--allow-all"
+      ],
+      "attachSimplePort": 9229
+    },
+    {
+      "name": "Launch Deno",
+      "request": "launch",
+      "type": "pwa-node",
+      "program": "./src/cli/mod.ts",
+      "runtimeExecutable": "deno",
+      "cwd": "${workspaceFolder}",
+      "runtimeArgs": [
+        "run",
+        "--unstable",
+        "--inspect-brk",
+        "--allow-all",
+      ],
+      "args": [
+        "-d 11",
+        "--part1",
+        "src/problems/day11/sample.txt"
+      ],
+      "attachSimplePort": 9229,
+      "outputCapture": "std"
+    }
+  ]
 }
