--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,9 +19,10 @@
       ],
       "args": [
         "run",
-        "-d 17",
-        "-a",
-        "--sample"
+        "-d 10",
+        "-p 2",
+        // "--sample",
+        // "--file=src/solutions/day10/sample_1.txt"
       ],
       "attachSimplePort": 9229,
       "outputCapture": "std"
