--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,9 +19,9 @@
       ],
       "args": [
         "run",
-        "-d 10",
-        "-p 2",
-        // "--sample",
+        "-d 19",
+        "-p 1",
+        "--sample",
         // "--file=src/solutions/day10/sample_1.txt"
       ],
       "attachSimplePort": 9229,
